Fix elements alignment in footer

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -141,5 +141,8 @@
 
 .badges:nth-last-child(1) {
   margin-right: 0;
+  @media (max-width: $sm) {
+    margin-right: 40px;
+  }
 }
 
